# paddle_inference_benchmark

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  timer.h
cmake/: FindFluid.cmake  FindPaddle.cmake
fluid/: inference_helper.cc  inference_helper.h  main.cc
samples/: CMakeLists.txt  common.h  faster_rcnn_tester.cc  machine_reading_comprehension_tester.cc  ocr_attention_tester.cc  ocr_ctc_tester.cc  ocr_plate_tester.cc  video_tester.cc
utils/: utils.h
v2/: inference_helper.cc  inference_helper.h  main.cc
